--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
    License: none (public domain)
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Castoro&family=Philosopher:wght@700&display=swap');
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -46,84 +49,96 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+*{
+    box-sizing: border-box;
+}
+body{
+    line-height: 1.5;
+    font-family: Castoro, sans-serif;
+    font-size: 24px;
+}
+
 .container{
     margin: 0 auto;
+    width: 1296px;
+}
+.mt-160{
+    margin-top: 160px;
 }
 .nameCard h1{
-    padding: 160px 0 0 312px;
     font-size: 128px;
-    line-height: 192px;
+    letter-spacing:0.12em;
 }
 .nameCard img{
     display: block;
-    margin: 0 auto;
+    max-width: 636px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .nameCard h2{
     font-size: 128px;
-    line-height: 192px;
-    padding-left: 972px;
+    letter-spacing:12px;
+    text-align: end;
 }
 
 .container-Resume{
+    margin: 0 auto;
     background: #EFEFEF;
     padding-top: 48px;
     padding-bottom: 48px;
 }
+.mb-80{
+    margin-bottom: 80px;
+}
+.w-50{
+    width: 50%;
+}
 .container-Resume p{
-    margin-left: 972px;
+    margin-left: auto;
     font-size: 32px;
-    line-height: 48px;
 }
-.container-Vito{
-    border-bottom: 3px #AE0000 solid;
-    width: 636px;
-    margin-left: 312px;
-    margin-top: 80px;
-}
-h3{
+
+.title{
     font-size: 40px;
     color: #AE0000;
-    line-height: 60px;
+    border-bottom: 1px solid #AE0000;
 }
-.list{
-    margin-left: 312px;
-    margin-top: 16px;
+.mb-16{
+    margin-bottom: 16px;
 }
-.list li{
-    font-size: 24px;
-    line-height: 38px;
+.mb-8{
+    margin-bottom: 8px;
 }
-.container-Info{
-    border-bottom: 3px #AE0000 solid;
-    width: 636px;
-    margin-left: 312px;
-    margin-top: 40px;
+.mb-40{
+    margin-bottom: 40px;
 }
-.education-Info{
-    margin-left: 312px;
-}
-.education-Info em{
+.year{
     font-size: 20px;
     color: #949494;
     font-style: italic;
-    line-height: 30px;
-    padding-top: 16px;
 }
-.education-Info p{
-    font-size: 24px;
-    line-height: 36px;
+.mb-12{
+    margin-bottom: 12px;
 }
-.awards-Info{
-    border-bottom: 3px #AE0000 solid;
-    width: 636px;
-    margin-left: 312px;
-    padding-top: 40px;
+.mb-160{
+    margin-bottom: 160px;
 }
-
-.awards-Container p{
-    margin-left: 312px;
-    font-size: 24px;
-    line-height: 36px;
-    margin-top: 16px;
-
+.mr-40{
+    margin-right: 40px;
+}
+.footer {
+    background-color: #000000;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    text-align: center;
+  }
+.footer-List{
+    display:flex;
+    justify-content:center;
+}
+.footer-Itme{
+    display:inline-block;
+}
+a:hover{
+    opacity: 0.5;
 }
